tests/fixtures/LatestTests/ConstVariableDeclarationTests/errors/const_redeclaration.fg
/; EXPECT_ERROR: VariableAlreadyDeclared
const x:int = 5
const x:int = 10

